  improvements).
* Modularised GUI - menus and toolbars are hidden / shown as appropriate for
  the document being edited.
* Toolbar item editor is now squashable.
* Lots of icon improvements.

Polishing:
* Removed flicker when resizing the work area.
* Remember cursor position in text documents on save / restore.
* Removed flicker when joining / splitting connectors.
* Save undo / redo state after editing data.
* Remember connection routing selection.
* Try and retain upwards position of text when rotating / reflecting components.
* Editing of real numbers now always uses three significant figures.
* Give LEDs a nice selection of predefined LED colours.

Miscellaneous Features:
* PIC program uploading (via the use of external programs).
* Allow changing of the z-ordering of items.
* Added support for gpsim-0.21.11 and gpsim-0.21.12.

Changes between Qt3 and Qt4 port (to be completed)
====
- ktechlab compiles and runs with Qt4 and kdelibs4
- fixed crash on item drag to circuit, if the item is held less than ~1s over the circuit (if it is, then dragging appears to work)
    - caused by timing condition, related to dragging explicit event consumption in the application
- added flexible logging system
- fixed removing of subcircuits from component list
- removed: delete subcircuit with the delete key
    - can be readded as a feature
- fix to allow changing the name of an external connector
- fixed graphical glitches with external components; caused by a painter used for taking font metrics
- fixed use-after free crash in ECSRFlipFlop::inStateChanged(), when SR flipflops are added and removed subsequenctly to a circuit
- fixed possible graphical glitches on color selecting widget
- fixed crash when closing ktechlab with probes placed on a circuit
- fixed button for inserting DrawParts (text, arrow, rectangle, etc.) in circuits and in flowcode
- fixed pressing cancel in the new.. dialog; now it does work